mr.wen 更新composer

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
   ],
   "require": {
     "gregwar/captcha": "1.*",
-    "ramsey/uuid": "^3.2",
-    "iscms/alisms-for-laravel": "0.0.1.*"
+    "ramsey/uuid": "^3.2"
   },
   "autoload": {
     "psr-4": {
